<resources>
    <string name="app_name">Arkanoid</string>

    <string name="newGame">New Game</string>
    <string name="loadGame">Load Game</string>
    <string name="settings">Settings</string>
    <string name="scores">Scores</string>
    <string name="quit">Quit</string>

    <string name="bestScores">Best Scores</string>

    <string name="level_editor">Levels Editor</string>

    <string name="title_activity_main_menu">Main_Menu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_splash_screen">Arkan App</string>
    <string name="welcome"> Welcome in </string>
    <string name="quit_really">Do you really want to go out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="historical_games">historical games</string>
    <string name="dai_un_nome_al_livello">Name the level</string>
    <string name="initial_speed_ball">Initial speed ball:</string>
    <string name="sadimage">sadImage</string>
    <string name="language">Language</string>
    <string name="sounds">Sounds</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="gametime">Game Time: </string>
    <string name="gamelevel">Level: </string>
    <string name="score">Score: </string>
    <string name="controllers">Controllers</string>
    <string name="nickname">Nickname</string>
    <string name="timeanddate">Time and Date: </string>
    <string name="selectLang">Select</string>
    <string name="selectLangTitle">Select the language</string>
    <string name="matchId">Insert match ID</string>
    <string name="imagesad">imageSad</string>
    <string name="copy_matchId_clipboard">MatchID copied in notes: Share it with your opponent</string>
    <string name="lifes">lifes</string>
    <string name="savelevel">level saved</string>
    <string name="errorSaveLevel">Error to save level</string>

</resources>
