<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ballSpeed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelEditor">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/level_editor"
        android:textColor="@color/colorPrimary"
        android:textSize="29sp"
        app:layout_constraintBottom_toTopOf="@id/editTextLevelName"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectedSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="1"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/seekBar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/selectedSpeed"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:max="10"
        android:progress="1"
        android:progressDrawable="@drawable/custom_seekbar"
        android:thumb="@drawable/custom_thumb"
        app:layout_constraintBottom_toTopOf="@+id/selectedSpeed"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/textView5" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLevelName">

        <TableRow
            android:id="@+id/tableRow0"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton0"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />

            <ImageButton
                android:id="@+id/imageButton11"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />

            <ImageButton
                android:id="@+id/imageButton12"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />

            <ImageButton
                android:id="@+id/imageButton13"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />

            <ImageButton
                android:id="@+id/imageButton14"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton15"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />

            <ImageButton
                android:id="@+id/imageButton16"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />

            <ImageButton
                android:id="@+id/imageButton17"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />

            <ImageButton
                android:id="@+id/imageButton18"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />

            <ImageButton
                android:id="@+id/imageButton19"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton20"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />

            <ImageButton
                android:id="@+id/imageButton21"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />

            <ImageButton
                android:id="@+id/imageButton22"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />

            <ImageButton
                android:id="@+id/imageButton23"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />

            <ImageButton
                android:id="@+id/imageButton24"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="showCustomDialog"
                android:tag="black"
                app:srcCompat="@drawable/brick_black" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/initial_speed_ball"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/tableLayout"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <EditText
        android:id="@+id/editTextLevelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/dai_un_nome_al_livello"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/tableLayout"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>